# crud

./: .coveragerc  .gitignore  .pylintrc  LICENSE  Makefile  README.md  maketool.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4c5c50763db4_initial_migration.py
crud/: __main__.py  auth.py  database.py  main.py  model.py  models.py  schemas.py  settings.py  util.py
crud/api/v1/: auth.py
crud/conf/: logging.dev.json  logging.prod.json
crud/controller/: post.py  user.py
crud/libs/: cache.py  database.py  error.py  logging.py  settings.py  types.py  version.py
crud/models/: __init__.py
crud/routes/: __init__.py  auth.py  debug.py  user.py
crud/schemas/: __init__.py  post.py  user.py
crud/settings/: __init__.py  database.py
requirements/: build_requirements.txt  dev_requirements.txt  requirements.txt  test_requirements.txt
scripts/: common.sh  settings.sh
scripts/devel/: coverage.sh  entrypoint.sh  lint.sh  make_venv.sh  migration.sh  test.sh
scripts/prod/: entrypoint.sh
tests/: conftest.py  test_util.py
tests/libs/: test_database.py  test_logging.py  test_version.py
tests/routes/: test_user.py
